complished the whole framework, solve setWordWrap problem

--- a/src/plugins/notification_plugin/qss/notification_plugin.css
+++ b/src/plugins/notification_plugin/qss/notification_plugin.css
@@ -218,6 +218,9 @@ QLabel#Summary{
 QLabel#body{
     color:rgba(255,255,255,0.57);    /*文字颜色*/
     font-size:14px;
+    background-color:transparent;
+    padding:0px;
+    height:24px;
 }
 
 QLabel#ShowLeftItem{
